# 3-football-on-paper

./: .gitignore  README  configure.ac
include/: insider.h  paper-football.h  parser.h
m4/: leaks.m4
scripts/: annotator.py  create_engines.py  deathmatch.py  engine.py  engine_stats.py  engine_timing.py  init_tourney.py  play_tourney.py  pp_tourney.py  protocol.py  tournament.py  utils.py
sources/: Makefile.am  calc-hash.awk  enginelib.c  game.c  main.c  mcts-ai.c  parser.c  random-ai.c  utils.c  warns.c
sources/mcts/: ai.c  dev-0003.c
validation/: Makefile.am  db.c  insider.c  testlib.c  validation.sh.in
